Fix Book stretch on mobile

--- a/style.css
+++ b/style.css
@@ -335,7 +335,6 @@ footer h6{
         font-size: 0.80rem
     }
     #firstbook {
-        display: block;
          margin-top: 0%;
          margin-bottom: 0;
         }
